# bilibili-tui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  flake.nix  mise.toml
.github/workflows/: aur.yml
src/: main.rs
src/api/: client.rs  comment.rs  heartbeat.rs  live.rs  live_client.rs  live_ws.rs  mod.rs  video.rs
src/app/: action.rs  mod.rs
src/player/: mod.rs
src/storage/: mod.rs
src/ui/: dynamic.rs  dynamic_detail.rs  history.rs  home.rs  live.rs  live_detail.rs  login.rs  mod.rs  search.rs  settings.rs  sidebar.rs  theme.rs  video_card.rs  video_detail.rs
